--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -3,7 +3,7 @@
 <html>
 
     <head>
-        <title>Hello this is my first script</title>
+        <title>Hello this is my first script Trigger from GIthub</title>
 
         <style>
             a {
