--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -15,7 +15,7 @@
     </head>
 
     <body>
-        <h1>This is my first project</h1>
+        <h1>This is my first project From Github</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
