--- a/views/todo.ejs
+++ b/views/todo.ejs
@@ -16,7 +16,7 @@
     </head>
 
     <body>
-        <h1>This is my first project From Github</h1>
+        <h1>This is my first project From Github 2nd comit</h1>
         <ul>
             <% todolist.forEach(function(todo, index) { %>
             <li>
